--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 		"url": "https://github.com/diegopagini/Storybook_React",
 		"type": "git"
 	},
+	"peerDependencies": {
+		"react": ">=16",
+		"typescript": ">=4.0.0"
+	},
 	"release": {
 		"branches": [
 			"main"
