--- a/package.json
+++ b/package.json
@@ -74,8 +74,17 @@
 		"babel-loader": "^8.3.0",
 		"chromatic": "^6.11.4",
 		"copyfiles": "^2.4.1",
-		"rimraf": "^3.0.2"
+		"rimraf": "^3.0.2",
+		"semantic-release": "^19.0.5"
 	},
+	"plugins": [
+		"@semantic-release/commit-analyzer",
+		"@semantic-release/release-notes-generator",
+		"@semantic-release/changelog",
+		"@semantic-release/github",
+		"@semantic-release/npm",
+		"@semantic-release/git"
+	],
 	"readme": "ERROR: No README data found!",
 	"_id": "my-storybook@0.1.0"
 }
