--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "dhp-my-storybook-comp",
+	"name": "diego-pagini-my-storybook-components",
 	"version": "0.1.0",
 	"private": false,
 	"license": "MIT",
