--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
           node-version: 14.17
 
       - name: Install Dependencies
-        run: npm install
+        run: yarn install
 
       - name: Build App
-        run: npm run build
+        run: yarn build
 
       - name: Semantic Release
         env:
